[package]
name = "jira_peek"
version = "0.1.1"
authors = ["Scott Hardy <hardy613+jira_peek@gmail.com>"]

[dependencies]
futures = "0.1"
tokio-core = "0.1.9"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[dependencies.reqwest]
version = "0.7.2"
features = ["unstable"]

[[bin]]
name = "jira_peek"
path = "src/main.rs"
